# metriclab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/sample/: funnel_2021_01.csv  ordered_session_funnel_2021_01.csv  view_to_cart_by_acquisition_2021_01.csv  view_to_cart_by_device_2021_01.csv
docs/: decision_memo.md  experiment_spec.md  funnel_findings.md  segmentation_findings.md
sql/analysis/: view_to_cart_by_acquisition.sql  view_to_cart_by_device.sql
sql/marts/: ordered_session_funnel.sql  user_funnel.sql
src/metriclab/: __init__.py  analysis.py  power.py  simulation.py
tests/: test_analysis.py
