[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metriclab"
version = "0.1.0"
description = "E-commerce experimentation and product analytics platform"
requires-python = ">=3.11"
dependencies = [
  "altair>=5.0,<7",
  "numpy>=1.26",
  "pandas>=2.1",
  "streamlit>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]
